allows client to leave a review

--- a/webserver/templates/appointments.html
+++ b/webserver/templates/appointments.html
@@ -19,6 +19,7 @@
       <th scope="col">Provider</th>
       <th scope="col">Duration</th>
       <th scope="col">Cost</th>
+      <th scope="col">Action</th>
     </tr>
   </thead>
   <tbody>
@@ -32,10 +33,115 @@
         <td>{{appt['provider_name']}}</td>
         <td>{{appt['duration']}}</td>
         <td>{{appt['cost']}}</td>
+        {% if appt['status'] == 'Booked' %}
+          <td>
+            <button 
+            type="button" 
+            class="btn btn-sm btn-outline-primary" 
+            data-bs-toggle="modal" 
+            data-bs-target="#exampleModal"
+            data-bs-eid = {{appt['eid']}}
+            data-bs-employee={{appt['employee_name']}}>Rate</button>
+          </td>
+        {% endif %}
       </tr>
     {% endfor %}
   </tbody>
 </table>
+
+
+
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Review</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form method="post">
+        <div class="modal-body">
+            <div class="mb-3">
+              <label for="recipient-name" class="col-form-label">Employee:</label>
+              <input disabled type="text" class="form-control" id="recipient-name">
+              <input type="hidden" id="eid" name="employee_id">
+            </div>
+            <div class="mb-3">
+              <label for="message-text" class="col-form-label">Description:</label>
+              <textarea name="description" class="form-control" id="message-text"></textarea>
+            </div>
+            <div class="mb-3" style="display: flex; flex-direction:row; justify-content: space-between;">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="1">
+                <label class="form-check-label" for="flexRadioDefault1">1</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="2">
+                <label class="form-check-label" for="flexRadioDefault1">2</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="3">
+                <label class="form-check-label" for="flexRadioDefault1">3</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="4">
+                <label class="form-check-label" for="flexRadioDefault1">4</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="5">
+                <label class="form-check-label" for="flexRadioDefault1">5</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="6">
+                <label class="form-check-label" for="flexRadioDefault1">6</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="7">
+                <label class="form-check-label" for="flexRadioDefault1">7</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="8">
+                <label class="form-check-label" for="flexRadioDefault1">8</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="9">
+                <label class="form-check-label" for="flexRadioDefault1">9</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="rating" value="10">
+                <label class="form-check-label" for="flexRadioDefault1">10</label>
+              </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Leave review</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+<script>
+  var exampleModal = document.getElementById('exampleModal')
+  exampleModal.addEventListener('show.bs.modal', function (event) {
+    var button = event.relatedTarget
+    var recipient = button.getAttribute('data-bs-employee')
+    var empId = button.getAttribute('data-bs-eid')
+    
+    // Update the modal's content.
+    var modalTitle = exampleModal.querySelector('.modal-title')
+    var modalBodyInput = exampleModal.querySelector('.modal-body input')
+    var modalBodyEmpID = exampleModal.querySelector('.modal-body #eid')
+    modalTitle.textContent = 'Rate your experience with ' + recipient
+    modalBodyInput.value = recipient
+    modalBodyEmpID.value = empId
+  })
+</script>
 
 
 
